[package]
name = "patient-scanner"
version = "0.1.0"
description = "A Tauri app for analyzing patient medical documents"
authors = ["You"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.11", features = [] }
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"

[features]
# This is required to enable custom protocols
custom-protocol = ["tauri/custom-protocol"]
